@@ -33,9 +33,10 @@
 // 20090922 - 2009-09-22aRagexeRE+ - 0x7e5, 0x7e7, 0x7e8, 0x7e9
 // 20091103 - 2009-11-03aRagexeRE+ - 0x7f7, 0x7f8, 0x7f9, 0x7fb
 // 20100105 - 2010-01-05aRagexeRE+ - 0x800, 0x801
+// 20100223 - 2010-02-23aRagexeRE+ - 0x80f
 #ifndef PACKETVER
-	//#define PACKETVER	20081126
-	#define PACKETVER 20100105
+	//#define PACKETVER	20090922
+	#define PACKETVER 20100223
 #endif
 // backward compatible PACKETVER 8 and 9
 #if PACKETVER == 8
